--- a/Site_Web/styles.scss
+++ b/Site_Web/styles.scss
@@ -1,4 +1,3 @@
-
 $primaryColor: #978ee9;
 
 
@@ -6,79 +5,23 @@ html{
     width: 80%;
     margin:auto;
     background-color: #cac7e6;
-   
+    scroll-behavior: smooth;
 }
-#decalHeader{
-    
-height: 10px;
-}
+
 header{
-    //padding-top: 10px;
+    
     background-color: #ffffff;
     border : 4px solid rgb(41, 9, 155); 
-}
-/*Barre de menu*/
-nav .first{
-   // margin-right: 00px;
-}
-nav button{
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: white;
-    border-style:none;
-    font-weight:bold;
-    font-size:larger ;
-    /*white-space: nowrap;*/
-}
-
-nav button:focus, nav button:hover{
-    background-color: none;
-    color: $primaryColor;
-    border-color: none;
-    border-style:none;
-}
-.nav-link, .navbar-brand{
-    color: black !important;
-}
-
-nav li{
-    font-size: 18px;
-    border-style:none;
-}
-.dropdown-item{
-    background-color: white;
-}
-.dropdown-item:focus, .dropdown-item:hover{
-    background-color: none;
-    color: $primaryColor;
-    border-color: none;
-    border-style:none;
-}
-nav #en-cours{
-    color: $primaryColor;
-}
-/*Image Logo Bandeau supérieur*/
-.logo{
-    
-   /* position: absolute;
-    z-index: 10;*/
-    margin-top: -70px;
-    margin-left: 20px;
-}
-.logo1 img{
-    width: 30%;
-    border : 15px solid white;
+  padding-top: 10px;
+  margin-top: 0px;
+  margin: auto;
+  width: 95%;
 }
 body{
     position: relative;
-    background-image: url('images/fond1.JPG');
-    //margin-top: -50px;
-    margin-bottom: -100px;
-    background-size: cover;
-    min-height: 100vh;
-    //background-image: url();
-    height: 100%;
-    //background-color: #cac7e6;
+  background-image: url("images/fond1.JPG");
+  background-size: cover;
+  min-height: 100vh;
 }
 
 h1{
@@ -87,9 +30,6 @@ h1{
     margin-left: 15%;
     margin-bottom: 70px;
     font-weight: bolder;
-}
-.decalTitre{
-    margin-left: 35%;
 }
 
 .sousTitre{
@@ -107,6 +47,60 @@ h1{
     margin-top: 15px;
     
 }
+/*Barre de menu*/
+nav ul {
+    list-style-type: none;
+  }
+
+  nav li {
+    display: inline-block;
+    text-align: center;
+    border-style: none;
+    margin-right: 10px;
+    vertical-align: top;
+  }
+  nav a {
+    display: block;
+    color: black;
+    font-weight: bold;
+    font-size: larger;
+    text-decoration: none;
+  }
+  nav a:focus, a:hover {
+    color: $primaryColor;
+    text-decoration: none;
+  }
+  nav button {
+    background-color: transparent;
+    border: none;
+    font-size: 1.1em;
+    margin-left: 10px;
+    margin-right: 10px;
+    font-weight: bold;
+  }
+
+
+  .dropdown-item {
+    background-color: white;
+    text-align: left;
+  }
+.dropdown-item:focus, .dropdown-item:hover{
+    background-color: none;
+    color: $primaryColor;
+    border-color: none;
+    border-style:none;
+}
+nav #en-cours{
+    color: $primaryColor;
+}
+/*Image Logo menu*/
+
+#logo1 img {
+    width: 250px;
+    border: none;
+    padding-left: -50px;
+  }
+
 .chartContainer{
     display: grid; 
     grid-template-columns: 0.25fr 1.2fr 1.2fr 1.2fr 0.9fr 0.25fr; 
@@ -179,31 +173,21 @@ h1{
 
 
 /*responsive*/
-@media screen and (max-width: 1280px){
-    nav button{
-      font-size: 12px;
-}
+@media screen and (max-width: 1550px) {
+    html {
+      width: 100%;
     }
-  
-    @media screen and (max-width: 1060px){
-        nav button{
-            font-size: 9px;
+  }
+  @media screen and (max-width: 780px) {
+    html {
+      width: 100%;
     }
-
-    .logo{
-    
-        /* position: absolute;
-         z-index: 10;*/
-         margin-top: 150px;
-         margin-left: 20px;
-     }
-     .logo1 img{
-         width: 25%;
-         border : 15px solid white;
-     }
-        }
-        @media screen and (max-width: 900px){
-            nav button{
-              font-size: 12px;
-        }
+    nav ul {
+      height: 420px;
     }
+    nav li {
+      display: block;
+      text-align: center;
+    }
+  }
+  /*responsive*//*# sourceMappingURL=styles.css.map */
